added entity attribute accessor overrides for testing diff-merge conflict

--- a/flowcharts_project.json
+++ b/flowcharts_project.json
@@ -1,5 +1,29 @@
 {
   "description": "",
   "title": "env-ds-diff-merge",
-  "content": {}
+  "content": {
+    "executionOrder": [
+      "flow1",
+      "Lorem ipsum dolor sit amet consectetur adipiscing elit In eget venenatis urna Proin fringilla ex tellus id hendrerit metus feugiat eget Ut commodo dignissim turpis sit amet tempor Morbi aliquam"
+    ],
+    "filters": {
+      "fltUID_override1_true_override2_false_0": {
+        "combo": {
+          "override1": "true",
+          "override2": "false"
+        },
+        "id": "fltUID_override1_true_override2_false_0"
+      },
+      "fltUID_override1_true_override2_true_0": {
+        "combo": {
+          "override1": "true",
+          "override2": "true"
+        },
+        "id": "fltUID_override1_true_override2_true_0"
+      }
+    },
+    "isCustomFunctionsFromScriptsDir": false,
+    "projectSuiteInfo": [],
+    "flowchartsAndExternalDdcsvInfo": {}
+  }
 }
